--- a/MyPage.html
+++ b/MyPage.html
@@ -23,7 +23,7 @@
   <!-- Side Menu -->
   <div id="side-menu">
     <ul>
-      <li><a href="#education">Education</a></li>
+      <li><a href="#education">Education & Technical Skills</a></li>
       <li><a href="#experience">Work Experience</a></li>
       <li><a href="#skills">Skills</a></li>
       <li><a href="#contact">Contact Me</a></li>
@@ -58,7 +58,7 @@
 
   <section id="skills">
     <div class="skills card" data-aos="zoom-in">
-      <h2 class="section-title">Technical Skills</h2>
+      <h2 class="section-title"> Education & Technical Skills</h2>
       <ul>
         <li>
           <h3>Programming</h3>
