--- a/MyPage.html
+++ b/MyPage.html
@@ -167,17 +167,28 @@
   </div>
 
   <section id="education">
-    <div class="education card" data-aos="fade-right">
-      <h2 class="section-title">Education</h2>
-      <ul>
-        <li>
-          <h3>University Name</h3>
-          <p class="date">Graduated: May 20XX</p>
-          <p>Bachelor of Science in Computer Science</p>
-        </li>
-      </ul>
-    </div>
-  </section>
+  <div class="education card" data-aos="fade-right">
+    <h2 class="section-title">Education</h2>
+    <ul>
+      <li>
+        <h3>University Name</h3>
+        <p class="date">Graduated: May 20XX</p>
+        <p>Bachelor of Science in Computer Science</p>
+        <p><strong>Technical Skills:</strong></p>
+        <ul>
+          <li><strong>Programming:</strong> C, Java, JavaScript, OCaml, Bash. OOP and functional programming.</li>
+          <li><strong>Algorithms & Data Structures:</strong> Search, sorting, lists, trees, and graphs.</li>
+          <li><strong>Operating Systems & Networks:</strong> Processes, TCP/IP, routing, and network communication.</li>
+          <li><strong>Databases:</strong> Relational modeling, SQL, and data normalization.</li>
+          <li><strong>Artificial Intelligence:</strong> Search, logic programming, planning, and machine learning.</li>
+          <li><strong>Computer Graphics:</strong> WebGL, OpenGL, and interactive graphical applications.</li>
+          <li><strong>Web Development:</strong> Node.js, React, Git, Docker.</li>
+          <li><strong>Mathematics & Computational Logic:</strong> Formal logic and set theory.</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
 
   <section id="experience">
     <div class="experience card" data-aos="fade-left">
