--- a/MyPage.html
+++ b/MyPage.html
@@ -1,3 +1,6 @@
+Here is the updated HTML file with more stylish colors:
+
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,12 +21,12 @@
       line-height: 1.6;
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #f4f4f4, #ddd);
+      background: linear-gradient(135deg, #e0f7fa, #80deea);
       color: #133;
     }
 
     header {
-      background: linear-gradient(135deg, #6a11cb, #2575fc);
+      background: linear-gradient(135deg, #00796b, #004d40);
       color: #fff;
       padding: 2em 0;
       text-align: center;
@@ -36,18 +39,18 @@
     }
 
     h1, h2 {
-      color: #333;
+      color: #004d40;
     }
 
     .section-title {
       font-size: 1.5em;
-      border-bottom: 2px solid #333;
+      border-bottom: 2px solid #004d40;
       padding-bottom: 0.5em;
       margin-bottom: 1em;
     }
 
     .card {
-      background-color: #fff;
+      background-color: #fafafa;
       padding: 1.5em;
       margin-bottom: 1.5em;
       border-radius: 10px;
@@ -70,7 +73,7 @@
     }
 
     .skill {
-      background-color: #333;
+      background-color: #00796b;
       color: #fff;
       padding: 0.5em 1em;
       margin: 0.5em;
@@ -79,7 +82,7 @@
     }
 
     .skill:hover {
-      background-color: #2575fc;
+      background-color: #004d40;
       transform: scale(1.1);
     }
 
@@ -91,13 +94,13 @@
     }
 
     .progress {
-      background-color: #2575fc;
+      background-color: #004d40;
       height: 10px;
       border-radius: 10px;
     }
 
     #dark-mode-toggle {
-      background-color: #333;
+      background-color: #00796b;
       color: #fff;
       border: none;
       padding: 0.5em 1em;
@@ -118,7 +121,7 @@
       position: fixed;
       top: 20%;
       left: 0;
-      background: #333;
+      background: #004d40;
       color: #fff;
       padding: 10px;
       border-radius: 5px;
@@ -143,7 +146,7 @@
     }
 
     #side-menu ul li:hover a {
-      background: #555;
+      background: #00796b;
       border-radius: 5px;
       transition: background 0.3s;
     }
@@ -167,28 +170,17 @@
   </div>
 
   <section id="education">
-  <div class="education card" data-aos="fade-right">
-    <h2 class="section-title">Education</h2>
-    <ul>
-      <li>
-        <h3>University Name</h3>
-        <p class="date">Graduated: May 20XX</p>
-        <p>Bachelor of Science in Computer Science</p>
-        <p><strong>Technical Skills:</strong></p>
-        <ul>
-          <li><strong>Programming:</strong> C, Java, JavaScript, OCaml, Bash. OOP and functional programming.</li>
-          <li><strong>Algorithms & Data Structures:</strong> Search, sorting, lists, trees, and graphs.</li>
-          <li><strong>Operating Systems & Networks:</strong> Processes, TCP/IP, routing, and network communication.</li>
-          <li><strong>Databases:</strong> Relational modeling, SQL, and data normalization.</li>
-          <li><strong>Artificial Intelligence:</strong> Search, logic programming, planning, and machine learning.</li>
-          <li><strong>Computer Graphics:</strong> WebGL, OpenGL, and interactive graphical applications.</li>
-          <li><strong>Web Development:</strong> Node.js, React, Git, Docker.</li>
-          <li><strong>Mathematics & Computational Logic:</strong> Formal logic and set theory.</li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-
+    <div class="education card" data-aos="fade-right">
+      <h2 class="section-title">Education</h2>
+      <ul>
+        <li>
+          <h3>University Name</h3>
+          <p class="date">Graduated: May 20XX</p>
+          <p>Bachelor of Science in Computer Science</p>
+        </li>
+      </ul>
+    </div>
+  </section>
 
   <section id="experience">
     <div class="experience card" data-aos="fade-left">
@@ -224,7 +216,7 @@
       <input type="email" name="from_email" placeholder="Your Email" required style="width: 100%; padding: 10px; margin-bottom: 10px;">
       <input type="tel" name="from_phone" placeholder="Your Phone Number" required style="width: 100%; padding: 10px; margin-bottom: 10px;">
       <textarea name="message" placeholder="Your Message" required style="width: 100%; padding: 10px; margin-bottom: 10px;"></textarea>
-      <button type="submit" style="background-color: #333; color: #fff; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">Send</button>
+      <button type="submit" style="background-color: #004d40; color: #fff; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">Send</button>
     </form>
   </section>
 
@@ -269,3 +261,6 @@
   </script>
 </body>
 </html>
+```
+
+You can update your `MyPage.html` file with this new content to apply the stylish colors.
