--- a/MyPage.html
+++ b/MyPage.html
@@ -1,6 +1,3 @@
-Here is the updated HTML file with more stylish colors:
-
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -116,6 +113,32 @@ Here is the updated HTML file with more stylish colors:
       color: #fff;
     }
 
+    .dark-mode header {
+      background: linear-gradient(135deg, #3f51b5, #1a237e);
+    }
+
+    .dark-mode .section-title {
+      color: #fff;
+      border-bottom: 2px solid #fff;
+    }
+
+    .dark-mode .card {
+      background-color: #333;
+      color: #fff;
+    }
+
+    .dark-mode .skill {
+      background-color: #1a237e;
+    }
+
+    .dark-mode .skill:hover {
+      background-color: #3f51b5;
+    }
+
+    .dark-mode .progress {
+      background-color: #3f51b5;
+    }
+
     /* Side Menu Styles */
     #side-menu {
       position: fixed;
@@ -150,9 +173,17 @@ Here is the updated HTML file with more stylish colors:
       border-radius: 5px;
       transition: background 0.3s;
     }
+
+    .dark-mode #side-menu {
+      background: #1a237e;
+    }
+
+    .dark-mode #side-menu ul li:hover a {
+      background: #3f51b5;
+    }
   </style>
 </head>
-<body>
+<body class="dark-mode">
   <button id="dark-mode-toggle">Toggle Dark Mode</button>
   <header>
     <h1>André Lopes</h1>
@@ -261,6 +292,3 @@ Here is the updated HTML file with more stylish colors:
   </script>
 </body>
 </html>
-```
-
-You can update your `MyPage.html` file with this new content to apply the stylish colors.
