--- a/MyPage.html
+++ b/MyPage.html
@@ -226,19 +226,22 @@
     </div>
   </section>
 
-  <section id="skills">
-    <div class="skills card" data-aos="zoom-in">
-      <h2 class="section-title">Skills</h2>
-      <div class="skill-bar">
-        <div class="progress" style="width: 75%;"></div>
-      </div>
-      <span class="skill">JavaScript</span>
-      <span class="skill">HTML</span>
-      <span class="skill">CSS</span>
-      <span class="skill">React</span>
-      <span class="skill">Node.js</span>
-    </div>
-  </section>
+ <section id="skills">
+  <div class="skills card" data-aos="zoom-in">
+    <h2 class="section-title">Competências Técnicas</h2>
+    <ul>
+      <li><strong>Programação:</strong> Sólida experiência em C, Java, OCaml, JavaScript, e Bash para desenvolvimento de software eficiente e otimizado. Profundo conhecimento em Programação Orientada a Objetos (POO) e paradigmas funcionais.</li>
+      <li><strong>Algoritmos e Estruturas de Dados:</strong> Proficiente na implementação de algoritmos de busca, ordenamento, programação dinâmica, e estruturas de dados como listas, árvores, grafos, pilhas e tabelas de dispersão.</li>
+      <li><strong>Sistemas Operativos e Redes:</strong> Familiaridade avançada com gerenciamento de processos, memória virtual, concorrência, e comunicação interprocessos. Experiência prática com sockets, protocolos TCP/IP, roteamento e construção de aplicações distribuídas.</li>
+      <li><strong>Bases de Dados:</strong> Forte conhecimento em modelagem relacional e entidade-relacionamento (ER), além de experiência em SQL para criação de esquemas, consultas complexas, procedimentos armazenados e manipulação de dados. Implementação de normalização e integridade referencial.</li>
+      <li><strong>Inteligência Artificial:</strong> Experiência com *algoritmos de busca (A*, BFS, DFS)*, lógica proposicional e de predicados, programação em lógica, planejamento automático e aprendizagem de máquinas. Conhecimentos em redes neurais e redes bayesianas para análise preditiva e diagnóstico.</li>
+      <li><strong>Computação Gráfica:</strong> Conhecimento em modelagem gráfica 3D utilizando WebGL e OpenGL. Desenvolvimento de aplicações gráficas interativas e interfaces de usuário utilizando modelos de sombreamento e rasterização de polígonos.</li>
+      <li><strong>Tecnologias de Desenvolvimento:</strong> Proficiência em controle de versões com Git, Docker para conteinerização, e uso de plataformas web como Node.js e React para criação de aplicações modernas e escaláveis.</li>
+      <li><strong>Matemática e Lógica Computacional:</strong> Aplicação de lógica formal e teoria de conjuntos para resolução de problemas complexos em áreas como computação teórica, modelagem de sistemas e raciocínio probabilístico.</li>
+      <li><strong>Desenvolvimento de Aplicações Distribuídas:</strong> Compreensão de arquiteturas de redes, qualidade de serviço (QoS), difusão de informações, endereçamento IP e protocolos como HTTP, com foco em desempenho e escalabilidade.</li>
+    </ul>
+  </div>
+</section>
 
   <section id="contact">
     <form id="contact-form" class="card" data-aos="fade-up">
