--- a/MyPage.html
+++ b/MyPage.html
@@ -1,297 +1,107 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>André Lopes - Resume</title>
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <!-- FontAwesome Icons -->
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <!-- AOS Library -->
-  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-  <!-- EmailJS Library -->
-  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(135deg, #e0f7fa, #80deea);
-      color: #133;
-    }
-
-    header {
-      background: linear-gradient(135deg, #00796b, #004d40);
-      color: #fff;
-      padding: 2em 0;
-      text-align: center;
-    }
-
-    section {
-      margin: 2em auto;
-      max-width: 800px;
-      padding: 1em;
-    }
-
-    h1, h2 {
-      color: #004d40;
-    }
-
-    .section-title {
-      font-size: 1.5em;
-      border-bottom: 2px solid #004d40;
-      padding-bottom: 0.5em;
-      margin-bottom: 1em;
-    }
-
-    .card {
-      background-color: #fafafa;
-      padding: 1.5em;
-      margin-bottom: 1.5em;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-
-    ul {
-      list-style-type: none;
-      padding: 0;
-    }
-
-    ul li {
-      margin-bottom: 1em;
-    }
-
-    .skills {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-
-    .skill {
-      background-color: #00796b;
-      color: #fff;
-      padding: 0.5em 1em;
-      margin: 0.5em;
-      border-radius: 5px;
-      transition: transform 0.3s ease, background-color 0.3s ease;
-    }
-
-    .skill:hover {
-      background-color: #004d40;
-      transform: scale(1.1);
-    }
-
-    .skill-bar {
-      background-color: #ddd;
-      border-radius: 10px;
-      overflow: hidden;
-      margin-bottom: 10px;
-    }
-
-    .progress {
-      background-color: #004d40;
-      height: 10px;
-      border-radius: 10px;
-    }
-
-    #dark-mode-toggle {
-      background-color: #00796b;
-      color: #fff;
-      border: none;
-      padding: 0.5em 1em;
-      border-radius: 5px;
-      cursor: pointer;
-      position: fixed;
-      top: 10px;
-      right: 10px;
-    }
-
-    .dark-mode {
-      background-color: #121212;
-      color: #fff;
-    }
-
-    .dark-mode header {
-      background: linear-gradient(135deg, #3f51b5, #1a237e);
-    }
-
-    .dark-mode .section-title {
-      color: #fff;
-      border-bottom: 2px solid #fff;
-    }
-
-    .dark-mode .card {
-      background-color: #333;
-      color: #fff;
-    }
-
-    .dark-mode .skill {
-      background-color: #1a237e;
-    }
-
-    .dark-mode .skill:hover {
-      background-color: #3f51b5;
-    }
-
-    .dark-mode .progress {
-      background-color: #3f51b5;
-    }
-
-    /* Side Menu Styles */
-    #side-menu {
-      position: fixed;
-      top: 20%;
-      left: 0;
-      background: #004d40;
-      color: #fff;
-      padding: 10px;
-      border-radius: 5px;
-      z-index: 1000;
-    }
-
-    #side-menu ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    #side-menu ul li {
-      margin-bottom: 10px;
-    }
-
-    #side-menu ul li a {
-      color: #fff;
-      text-decoration: none;
-      display: block;
-      padding: 5px;
-    }
-
-    #side-menu ul li:hover a {
-      background: #00796b;
-      border-radius: 5px;
-      transition: background 0.3s;
-    }
-
-    .dark-mode #side-menu {
-      background: #1a237e;
-    }
-
-    .dark-mode #side-menu ul li:hover a {
-      background: #3f51b5;
-    }
-  </style>
-</head>
-<body class="dark-mode">
-  <button id="dark-mode-toggle">Toggle Dark Mode</button>
-  <header>
-    <h1>André Lopes</h1>
-    <p>Web Developer | Business Analyst</p>
-  </header>
-
-  <!-- Side Menu -->
-  <div id="side-menu">
-    <ul>
-      <li><a href="#education">Education</a></li>
-      <li><a href="#experience">Work Experience</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#contact">Contact Me</a></li>
-    </ul>
-  </div>
-
-  <section id="education">
-    <div class="education card" data-aos="fade-right">
-      <h2 class="section-title">Education</h2>
-      <ul>
-        <li>
-          <h3>University Name</h3>
-          <p class="date">Graduated: May 20XX</p>
-          <p>Bachelor of Science in Computer Science</p>
-        </li>
-      </ul>
-    </div>
-  </section>
-
-  <section id="experience">
-    <div class="experience card" data-aos="fade-left">
-      <h2 class="section-title">Work Experience</h2>
-      <ul>
-        <li>
-          <h3>Company Name</h3>
-          <p class="date">June 20XX - Present</p>
-          <p>Describe your responsibilities and achievements here.</p>
-        </li>
-      </ul>
-    </div>
-  </section>
-
 <section id="skills">
   <div class="skills card" data-aos="zoom-in">
     <h2 class="section-title">Competências Técnicas</h2>
     <ul>
-      <li class="skill"><i class="fas fa-code"></i> <strong>Programação:</strong> Sólida experiência em C, Java, OCaml, JavaScript, e Bash para desenvolvimento de software eficiente e otimizado. Profundo conhecimento em Programação Orientada a Objetos (POO) e paradigmas funcionais.</li>
-      <li class="skill"><i class="fas fa-cogs"></i> <strong>Algoritmos e Estruturas de Dados:</strong> Proficiente na implementação de algoritmos de busca, ordenamento, programação dinâmica, e estruturas de dados como listas, árvores, grafos, pilhas e tabelas de dispersão.</li>
-      <li class="skill"><i class="fas fa-network-wired"></i> <strong>Sistemas Operativos e Redes:</strong> Familiaridade avançada com gerenciamento de processos, memória virtual, concorrência, e comunicação interprocessos. Experiência prática com sockets, protocolos TCP/IP, roteamento e construção de aplicações distribuídas.</li>
-      <li class="skill"><i class="fas fa-database"></i> <strong>Bases de Dados:</strong> Forte conhecimento em modelagem relacional e entidade-relacionamento (ER), além de experiência em SQL para criação de esquemas, consultas complexas, procedimentos armazenados e manipulação de dados. Implementação de normalização e integridade referencial.</li>
-      <li class="skill"><i class="fas fa-robot"></i> <strong>Inteligência Artificial:</strong> Experiência com *algoritmos de busca (A*, BFS, DFS)*, lógica proposicional e de predicados, programação em lógica, planejamento automático e aprendizagem de máquinas. Conhecimentos em redes neurais e redes bayesianas para análise preditiva e diagnóstico.</li>
-      <li class="skill"><i class="fas fa-palette"></i> <strong>Computação Gráfica:</strong> Conhecimento em modelagem gráfica 3D utilizando WebGL e OpenGL. Desenvolvimento de aplicações gráficas interativas e interfaces de usuário utilizando modelos de sombreamento e rasterização de polígonos.</li>
-      <li class="skill"><i class="fas fa-tools"></i> <strong>Tecnologias de Desenvolvimento:</strong> Proficiência em controle de versões com Git, Docker para conteinerização, e uso de plataformas web como Node.js e React para criação de aplicações modernas e escaláveis.</li>
-      <li class="skill"><i class="fas fa-calculator"></i> <strong>Matemática e Lógica Computacional:</strong> Aplicação de lógica formal e teoria de conjuntos para resolução de problemas complexos em áreas como computação teórica, modelagem de sistemas e raciocínio probabilístico.</li>
-      <li class="skill"><i class="fas fa-cloud"></i> <strong>Desenvolvimento de Aplicações Distribuídas:</strong> Compreensão de arquiteturas de redes, qualidade de serviço (QoS), difusão de informações, endereçamento IP e protocolos como HTTP, com foco em desempenho e escalabilidade.</li>
+      <li class="skill">
+        <button class="accordion"><i class="fas fa-code"></i> Programação</button>
+        <div class="panel">
+          <p>Sólida experiência em C, Java, OCaml, JavaScript, e Bash para desenvolvimento de software eficiente e otimizado. Profundo conhecimento em Programação Orientada a Objetos (POO) e paradigmas funcionais.</p>
+        </div>
+      </li>
+      <li class="skill">
+        <button class="accordion"><i class="fas fa-cogs"></i> Algoritmos e Estruturas de Dados</button>
+        <div class="panel">
+          <p>Proficiente na implementação de algoritmos de busca, ordenamento, programação dinâmica, e estruturas de dados como listas, árvores, grafos, pilhas e tabelas de dispersão.</p>
+        </div>
+      </li>
+      <li class="skill">
+        <button class="accordion"><i class="fas fa-network-wired"></i> Sistemas Operativos e Redes</button>
+        <div class="panel">
+          <p>Familiaridade avançada com gerenciamento de processos, memória virtual, concorrência, e comunicação interprocessos. Experiência prática com sockets, protocolos TCP/IP, roteamento e construção de aplicações distribuídas.</p>
+        </div>
+      </li>
+      <li class="skill">
+        <button class="accordion"><i class="fas fa-database"></i> Bases de Dados</button>
+        <div class="panel">
+          <p>Forte conhecimento em modelagem relacional e entidade-relacionamento (ER), além de experiência em SQL para criação de esquemas, consultas complexas, procedimentos armazenados e manipulação de dados. Implementação de normalização e integridade referencial.</p>
+        </div>
+      </li>
+      <li class="skill">
+        <button class="accordion"><i class="fas fa-robot"></i> Inteligência Artificial</button>
+        <div class="panel">
+          <p>Experiência com algoritmos de busca (A*, BFS, DFS), lógica proposicional e de predicados, programação em lógica, planejamento automático e aprendizagem de máquinas. Conhecimentos em redes neurais e redes bayesianas para análise preditiva e diagnóstico.</p>
+        </div>
+      </li>
+      <li class="skill">
+        <button class="accordion"><i class="fas fa-palette"></i> Computação Gráfica</button>
+        <div class="panel">
+          <p>Conhecimento em modelagem gráfica 3D utilizando WebGL e OpenGL. Desenvolvimento de aplicações gráficas interativas e interfaces de usuário utilizando modelos de sombreamento e rasterização de polígonos.</p>
+        </div>
+      </li>
+      <li class="skill">
+        <button class="accordion"><i class="fas fa-tools"></i> Tecnologias de Desenvolvimento</button>
+        <div class="panel">
+          <p>Proficiência em controle de versões com Git, Docker para conteinerização, e uso de plataformas web como Node.js e React para criação de aplicações modernas e escaláveis.</p>
+        </div>
+      </li>
+      <li class="skill">
+        <button class="accordion"><i class="fas fa-calculator"></i> Matemática e Lógica Computacional</button>
+        <div class="panel">
+          <p>Aplicação de lógica formal e teoria de conjuntos para resolução de problemas complexos em áreas como computação teórica, modelagem de sistemas e raciocínio probabilístico.</p>
+        </div>
+      </li>
+      <li class="skill">
+        <button class="accordion"><i class="fas fa-cloud"></i> Desenvolvimento de Aplicações Distribuídas</button>
+        <div class="panel">
+          <p>Compreensão de arquiteturas de redes, qualidade de serviço (QoS), difusão de informações, endereçamento IP e protocolos como HTTP, com foco em desempenho e escalabilidade.</p>
+        </div>
+      </li>
     </ul>
   </div>
 </section>
 
-  <section id="contact">
-    <form id="contact-form" class="card" data-aos="fade-up">
-      <h2 class="section-title">Contact Me</h2>
-      <input type="text" name="from_name" placeholder="Your Name" required style="width: 100%; padding: 10px; margin-bottom: 10px;">
-      <input type="email" name="from_email" placeholder="Your Email" required style="width: 100%; padding: 10px; margin-bottom: 10px;">
-      <input type="tel" name="from_phone" placeholder="Your Phone Number" required style="width: 100%; padding: 10px; margin-bottom: 10px;">
-      <textarea name="message" placeholder="Your Message" required style="width: 100%; padding: 10px; margin-bottom: 10px;"></textarea>
-      <button type="submit" style="background-color: #004d40; color: #fff; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">Send</button>
-    </form>
-  </section>
+<style>
+  .accordion {
+    background-color: #00796b;
+    color: white;
+    cursor: pointer;
+    padding: 0.5em 1em;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+    border-radius: 5px;
+  }
 
-  <!-- AOS Library -->
-  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-  <script>
-    // Initialize AOS Library
-    AOS.init();
+  .active, .accordion:hover {
+    background-color: #004d40;
+  }
 
-    // Dark Mode Toggle
-    document.getElementById('dark-mode-toggle').addEventListener('click', () => {
-      document.body.classList.toggle('dark-mode');
+  .panel {
+    padding: 0 18px;
+    display: none;
+    background-color: white;
+    overflow: hidden;
+    border-radius: 5px;
+    margin-top: 5px;
+  }
+</style>
+
+<script>
+  var acc = document.getElementsByClassName("accordion");
+  var i;
+
+  for (i = 0; i < acc.length; i++) {
+    acc[i].addEventListener("click", function() {
+      this.classList.toggle("active");
+      var panel = this.nextElementSibling;
+      if (panel.style.display === "block") {
+        panel.style.display = "none";
+      } else {
+        panel.style.display = "block";
+      }
     });
-
-    // Smooth Scroll for Side Menu
-    document.querySelectorAll('#side-menu a').forEach(anchor => {
-      anchor.addEventListener('click', function(e) {
-        e.preventDefault();
-        const targetId = this.getAttribute('href').substring(1);
-        const targetElement = document.getElementById(targetId);
-        targetElement.scrollIntoView({ behavior: 'smooth' });
-      });
-    });
-
-    // Initialize EmailJS
-    emailjs.init("j8Ryn8x7HQhIHSVYn");
-
-    // Handle Form Submission
-    document.getElementById('contact-form').addEventListener('submit', function (e) {
-      e.preventDefault();
-
-      emailjs.sendForm('service_l92h0px', 'template_rd4je38', this)
-        .then(() => {
-          alert('Message sent successfully!');
-          this.reset(); // Clear form
-        })
-        .catch((error) => {
-          console.error('EmailJS Error:', error.text);
-          alert(`Failed to send message: ${error.text}`);
-        });
-    });
-  </script>
-</body>
-</html>
+  }
+</script>
